<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_title"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />

    <group android:checkableBehavior="single">
        <item android:id="@+id/menu_sortBy" android:title="@string/menu_sort_by_title">
            <menu>
                <item android:id="@+id/menu_high_priority" android:title="@string/menu_high_priority_tile" />
                <item android:id="@+id/menu_lo_priority" android:title="@string/menu_low_priority_tile" />
            </menu>
        </item>
    </group>

    <item android:id="@+id/menu_delete_all" android:title="@string/menu_delete_all" app:showAsAction="never"/>

</menu>